--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -56,6 +56,13 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
+        startupProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          failureThreshold: 30
 ---
 apiVersion: v1
 kind: Service
