--- a/k8s/flyway-job.yaml
+++ b/k8s/flyway-job.yaml
@@ -1,21 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: flyway-migrations
-  namespace: demo
-data:
-  V1__create_users.sql: |
-    CREATE TABLE users (
-      id SERIAL PRIMARY KEY,
-      name TEXT NOT NULL,
-      email TEXT UNIQUE NOT NULL,
-      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-    );
-
-    INSERT INTO users (name, email) VALUES
-      ('Alice', 'alice@example.com'),
-      ('Bob', 'bob@example.com');
----
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -24,6 +6,23 @@ metadata:
 spec:
   template:
     spec:
+      initContainers:
+      - name: wait-for-postgres
+        image: postgres:16-alpine
+        command: 
+        - sh
+        - -c
+        - |
+          until pg_isready -h postgres -p 5432 -U $(POSTGRES_USER); do
+            echo "Waiting for postgres..."
+            sleep 2
+          done
+        env:
+        - name: POSTGRES_USER
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secret
+              key: POSTGRES_USER
       containers:
       - name: flyway
         image: flyway/flyway:10
