--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api
-  namespace: demo
+  namespace: go-k8s-demo
 spec:
   replicas: 2
   selector:
@@ -19,6 +19,13 @@ spec:
         imagePullPolicy: Never  # Use local image built with Docker
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "100m"
+          limits:
+            memory: "128Mi"
+            cpu: "200m"
         env:
         - name: POSTGRES_USER
           valueFrom:
@@ -68,7 +75,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api
-  namespace: demo
+  namespace: go-k8s-demo
 spec:
   selector:
     app: api
