--- a/k8s/postgres-secret.yaml
+++ b/k8s/postgres-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
-  namespace: demo
+  namespace: go-k8s-demo
 type: Opaque
 stringData:
   POSTGRES_USER: myuser
